--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
-[submodule "kerkee"]
-	path = kerkee
-	url = https://zihong@github.com/kercer/kerkee_ios.git
-[submodule "kerdb"]
-	path = kerdb
+[submodule "kerkeePlus/kerkee"]
+	path = kerkeePlus/kerkee
+	url = https://github.com/kercer/kerkee_ios.git
+[submodule "kerkeePlus/kerdb"]
+	path = kerkeePlus/kerdb
 	url = https://github.com/kercer/kerdb.git
