--- a/.gitignore
+++ b/.gitignore
@@ -1,17 +1,39 @@
 ## xcode specific
 *~
-*/Build/*
-build/*
 xcschememanagement.plist
-*.xcscheme
-UserInterfaceState.xcuserstate
 *.xcodeproj/*.mode*
-*.xcodeproj/*.pbxuser
 project.xcworkspace
-xcuserdata
-*.xcuserdata
 .svn
+
+
+## Build generated
+*/Build/*
+build/
+DerivedData
+
+## Various settings
+*.pbxuser
+!default.pbxuser
+*.mode1v3
+!default.mode1v3
+*.mode2v3
+!default.mode2v3
+*.perspectivev3
+!default.perspectivev3
+xcuserdata
+
+## Other
+*.xcuserdata
 *.xccheckout
+*.moved-aside
+*.xcuserstate
+*.xcscmblueprint
+*.xcscheme
+
+## Obj-C/Swift specific
+*.hmap
+*.ipa
+
 
 ## generic files to ignore
 *~
